--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -7,11 +7,14 @@ body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+.fa {
+  line-height: inherit;
+}
 .text-muted {
   color: #777777;
 }
 .text-primary {
-  color: #379DFC;
+  color: #fed136;
 }
 p {
   font-size: 14px;
@@ -28,13 +31,13 @@ a.active {
   outline: none;
 }
 a {
-  color: #379DFC;
+  color: #fed136;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #2576bc;
+  color: #fec503;
 }
 h1,
 h2,
@@ -57,8 +60,8 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: #379DFC;
-  border-color: #379DFC;
+  background-color: #fed136;
+  border-color: #fed136;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -69,7 +72,7 @@ h6 {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #2576bc;
+  background-color: #fec503;
   border-color: #f6bf01;
 }
 .btn-primary:active,
@@ -92,17 +95,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #379DFC;
-  border-color: #379DFC;
+  background-color: #fed136;
+  border-color: #fed136;
 }
 .btn-primary .badge {
-  color: #379DFC;
+  color: #fed136;
   background-color: white;
 }
 .btn-xl {
   color: white;
-  background-color: #379DFC;
-  border-color: #379DFC;
+  background-color: #fed136;
+  border-color: #fed136;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -116,7 +119,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #2576bc;
+  background-color: #fec503;
   border-color: #f6bf01;
 }
 .btn-xl:active,
@@ -139,35 +142,33 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #379DFC;
-  border-color: #379DFC;
+  background-color: #fed136;
+  border-color: #fed136;
 }
 .btn-xl .badge {
-  color: #379DFC;
+  color: #fed136;
   background-color: white;
 }
 .navbar-custom {
   background-color: #222222;
   border-color: transparent;
 }
-
-
 .navbar-custom .navbar-brand {
-  color: #379DFC;
-  font-family: "Times New Roman", "Helvetica Neue", Helvetica, Arial, cursive;
+  color: #fed136;
+  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: #2576bc;
+  color: #fec503;
 }
 .navbar-custom .navbar-collapse {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-custom .navbar-toggle {
-  background-color: #379DFC;
-  border-color: #379DFC;
+  background-color: #fed136;
+  border-color: #fed136;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   color: white;
@@ -175,7 +176,7 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #379DFC;
+  background-color: #fed136;
 }
 .navbar-custom .nav li a {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -186,22 +187,22 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #379DFC;
+  color: #fed136;
   outline: none;
 }
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #379DFC;
+  background-color: #fed136;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #2576bc;
+  background-color: #fec503;
 }
 @media (min-width: 768px) {
   .navbar-custom {
-    
+    background-color: transparent;
     padding: 25px 0;
     -webkit-transition: padding 0.3s;
     -moz-transition: padding 0.3s;
@@ -423,7 +424,7 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: #379DFC;
+  background-color: #fed136;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -539,6 +540,7 @@ section h3.section-subheading {
 .team-member {
   text-align: center;
   margin-bottom: 50px;
+  
 }
 .team-member img {
   margin: 0 auto;
@@ -578,7 +580,7 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: #379DFC;
+  border-color: #fed136;
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
@@ -639,15 +641,16 @@ ul.social-buttons li a {
   font-size: 20px;
   line-height: 40px;
   color: white;
-  outline: none;
+  outline: hidden;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
+  
 }
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #379DFC;
+  background-color: #fed136;
 }
 .btn:focus,
 .btn:active,
@@ -731,11 +734,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: #379DFC;
+  background: #fed136;
 }
 ::selection {
   text-shadow: none;
-  background: #379DFC;
+  background: #fed136;
 }
 img::selection {
   background: transparent;
@@ -744,5 +747,5 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #379DFC;
+  webkit-tap-highlight-color: #fed136;
 }
