--- a/views/index.pug
+++ b/views/index.pug
@@ -6,8 +6,9 @@ html(lang='en')
 		meta(name='description', content='Exchange Street Barber - Charleston, SC. Mens cuts, style, shave, nose wax, scalp massage, & more.')
 		meta(name='author', content='Chris Riewaldt')
 		title Exchange Street Barber - Charleston SC
+		
 		// Bootstrap Core CSS
-		link(href='css/bootstrap.min.css', rel='stylesheet')
+		link(href='vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
 		// Custom Fonts
 		link(href='vendor/font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
 		link(href='https://fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
@@ -19,8 +20,9 @@ html(lang='en')
 		// HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
 		// WARNING: Respond.js doesn't work if you view the page via file://
 		//if lt IE 9
-		script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js', integrity='sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY', crossorigin='anonymous')
-		script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js', integrity='sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo', crossorigin='anonymous')
+		//script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js', integrity='sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY', crossorigin='anonymous')
+		//script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js', integrity='sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo', crossorigin='anonymous')
+
 	body.index(id="page-top")
 		// Navigation
 		nav.navbar.navbar-default.navbar-custom.navbar-fixed-top(id="mainNav")
@@ -383,13 +385,15 @@ html(lang='en')
 										i.fa.fa-times
 										|  Close Project
 		
+		// body includes -->
+		
 		// jQuery
-		script(src='js/jquery.min.js')
+		script(src='vendor/jquery/jquery.min.js')
 		// Bootstrap Core JavaScript
-		script(src='js/bootstrap.min.js')
+		script(src='vendor/bootstrap/js/bootstrap.min.js')
 		// Plugin JavaScript
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js', integrity='sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb', crossorigin='anonymous')
-		// Contact Form JavaScript
-		script(src='js/jqBootstrapValidation.js')
 		// Theme JavaScript
 		script(src='js/agency.min.js')
+
+		// end body includes -->
