--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -10,6 +10,7 @@ body {
 .fa {
   line-height: inherit;
 }
+
 .text-muted {
   color: #777777;
 }
@@ -155,7 +156,7 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .navbar-brand {
   color: #fed136;
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+  font-family:  "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
