--- a/views/index.pug
+++ b/views/index.pug
@@ -73,21 +73,21 @@ html(lang='en')
 							i.flaticon-scissor-and-comb.fa-stack-1x
 						h4.service-heading Classic Haircut
 						p.text-muted
-							| Consult with shampoo, conditioning scalp massage, hot lather shave, and style.
+							| Consult with shampoo, conditioning, hot lather shave, and style.
 					div.col-md-4
 						span.fa-stack.fa-4x
 							i.fa.fa-circle.fa-stack-2x.text-primary
 							i.flaticon-razor-hair-salon-tool.fa-stack-1x
 						h4.service-heading Classic Straight Razor Shave
 						p.text-muted
-							| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+							| A calming yet envigorating experience shared by men around the world for thousands of years.
 					div.col-md-4
 						span.fa-stack.fa-4x
 							i.fa.fa-circle.fa-stack-2x.text-primary
 							i.flaticon-bald-man-head.fa-stack-1x
 						h4.service-heading Scalp Massage
 						p.text-muted
-							| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+							| Stimulate your nerves and blood vessels while calming muscle tension in your upper back, neck and scalp.
 				div.row.text-center
 					div.col-md-4
 						span.fa-stack.fa-4x
@@ -96,83 +96,33 @@ html(lang='en')
 							i.flaticon-hair-salon-tube-black-container-shape-side-view.fa-stack-1x
 						h4.service-heading Color Service
 						p.text-muted
-							| Consult with shampoo, conditioning scalp massage, hot lather shave, and style
+							| Offering a variety of natural colors to match and compliment your style.
 					div.col-md-4
 						span.fa-stack.fa-4x
 							i.fa.fa-circle.fa-stack-2x.text-primary
 							i.flaticon-male-head-hair-and-beard.fa-stack-1x
 						h4.service-heading Beard Trim
 						p.text-muted
-							| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+							| Keep your beard sharp with a trim, shaping, and finished with a hot lather shave.
 					.col-md-4
 						span.fa-stack.fa-4x
 							i.fa.fa-circle.fa-stack-2x.text-primary
 							i.flaticon-shaver.fa-stack-1x
-						h4.service-heading Nose Hair Removal
+						h4.service-heading Nose & Ear Hair Removal
 						p.text-muted
-							| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+							| Clipper and wax removal of unwanted nose and ear hair.
 		// Portfolio Grid Section
 		section.bg-light-gray(id="portfolio")
 			div.container
 				div.row
 					div.col-lg-12.text-center
-						h2.section-heading Portfolio
+						h2.section-heading Book 24/7
 						h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
 				div.row
-					div.col-md-4.col-sm-6.portfolio-item
-						a.portfolio-link(href='#portfolioModal1', data-toggle='modal')
-							div.portfolio-hover
-								div.portfolio-hover-content
-									i.fa.fa-plus.fa-3x
-							img.img-responsive(src='img/portfolio/roundicons.png', alt='')
-						div.portfolio-caption
-							h4 Round Icons
-							p.text-muted Graphic Design
-					div.col-md-4.col-sm-6.portfolio-item
-						a.portfolio-link(href='#portfolioModal2', data-toggle='modal')
-							div.portfolio-hover
-								div.portfolio-hover-content
-									i.fa.fa-plus.fa-3x
-							img.img-responsive(src='img/portfolio/startup-framework.png', alt='')
-						div.portfolio-caption
-							h4 Startup Framework
-							p.text-muted Website Design
-					div.col-md-4.col-sm-6.portfolio-item
-						a.portfolio-link(href='#portfolioModal3', data-toggle='modal')
-							div.portfolio-hover
-								div.portfolio-hover-content
-									i.fa.fa-plus.fa-3x
-							img.img-responsive(src='img/portfolio/treehouse.png', alt='')
-						div.portfolio-caption
-							h4 Treehouse
-							p.text-muted Website Design
-					div.col-md-4.col-sm-6.portfolio-item
-						a.portfolio-link(href='#portfolioModal4', data-toggle='modal')
-							div.portfolio-hover
-								div.portfolio-hover-content
-									i.fa.fa-plus.fa-3x
-							img.img-responsive(src='img/portfolio/golden.png', alt='')
-						div.portfolio-caption
-							h4 Golden
-							p.text-muted Website Design
-					div.col-md-4.col-sm-6.portfolio-item
-						a.portfolio-link(href='#portfolioModal5', data-toggle='modal')
-							div.portfolio-hover
-								div.portfolio-hover-content
-									i.fa.fa-plus.fa-3x
-							img.img-responsive(src='img/portfolio/escape.png', alt='')
-						div.portfolio-caption
-							h4 Escape
-							p.text-muted Website Design
-					div.col-md-4.col-sm-6.portfolio-item
-						a.portfolio-link(href='#portfolioModal6', data-toggle='modal')
-							div.portfolio-hover
-								div.portfolio-hover-content
-									i.fa.fa-plus.fa-3x
-							img.img-responsive(src='img/portfolio/dreams.png', alt='')
-						div.portfolio-caption
-							h4 Dreams
-							p.text-muted Website Design
+					div.col-md-12
+						div.container
+							include vagaro.html
+					
 		// About Section
 		section(id="about")
 			div.container
