--- a/views/index.pug
+++ b/views/index.pug
@@ -120,8 +120,7 @@ html(lang='en')
 						h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
 				div.row
 					div.col-md-12
-						div.container
-							include vagaro.html
+						div.vagaro
 					
 		// About Section
 		section(id="about")
@@ -371,5 +370,7 @@ html(lang='en')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js', integrity='sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb', crossorigin='anonymous')
 		// Theme JavaScript
 		script(src='js/agency.min.js')
+		//Detect Browser
+		script(src="js/detectBrowser.js")
 
 		// end body includes -->
