major UI changes, almost done

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,8 @@ html(lang='en')
 		meta(name='author', content='Chris Riewaldt')
 		title Exchange Street Barber - Charleston SC
 		
+		
+		
 		// Bootstrap Core CSS
 		link(href='vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
 		// Custom Fonts
@@ -45,9 +47,9 @@ html(lang='en')
 						li
 							a.page-scroll(href='#portfolio') Book 24/7
 						li
-							a.page-scroll(href='#about') About
+							a.page-scroll(href='#about') Location
 						li
-							a.page-scroll(href='#team') Team
+							a.page-scroll(href='#team') About
 				// /.navbar-collapse
 			// /.container-fluid
 		// Header
@@ -117,97 +119,37 @@ html(lang='en')
 				div.row
 					div.col-lg-12.text-center
 						h2.section-heading Book 24/7
-						h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
+						h3.section-subheading.text-muted Click the button below to book online anytime
 				div.row
 					div.col-md-12
-						div.vagaro
+						include vagaro.html
 					
 		// About Section
 		section(id="about")
 			div.container
 				div.row
 					div.col-lg-12.text-center
-						h2.section-heading About
-						h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
+						h2.section-heading Location & Directions
+						h3.section-subheading.text-muted Convienently located in downtown Charleston, steps from available garage and street parking.
+						p 10 Exchange Street, Charleston, SC, 29455
 				div.row
-					div.col-lg-12
-						ul.timeline
-							li
-								div.timeline-image
-									img.img-circle.img-responsive(src='img/about/1.jpg', alt='')
-								div.timeline-panel
-									div.timeline-heading
-										h4 2009-2011
-										h4.subheading Our Humble Beginnings
-									div.timeline-body
-										p.text-muted
-											| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-							li.timeline-inverted
-								div.timeline-image
-									img.img-circle.img-responsive(src='img/about/2.jpg', alt='')
-								div.timeline-panel
-									div.timeline-heading
-										h4 March 2011
-										h4.subheading An Agency is Born
-									div.timeline-body
-										p.text-muted
-											| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-							li
-								div.timeline-image
-									img.img-circle.img-responsive(src='img/about/3.jpg', alt='')
-								div.timeline-panel
-									div.timeline-heading
-										h4 December 2012
-										h4.subheading Transition to Full Service
-									div.timeline-body
-										p.text-muted
-											| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-							li.timeline-inverted
-								div.timeline-image
-									img.img-circle.img-responsive(src='img/about/4.jpg', alt='')
-								div.timeline-panel
-									div.timeline-heading
-										h4 July 2014
-										h4.subheading Phase Two Expansion
-									div.timeline-body
-										p.text-muted
-											| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-							li.timeline-inverted
-								div.timeline-image
-									h4
-										| Be Part
-										br
-										| Of Our
-										br
-										| Story!
+					div.col-lg-12.text-center
+						iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.581046592638!2d-79.92846108481793!3d32.776849480972096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fe7a0ee758693d%3A0x44cf23c2c2e5a1e7!2s10+Exchange+St%2C+Charleston%2C+SC+29401!5e0!3m2!1sen!2sus!4v1491110565202" width="600" height="450" frameborder="0" style="border:0" allowfullscreen)
+						
 		// Team Section
 		section.bg-light-gray(id="team")
 			div.container
 				div.row
 					div.col-lg-12.text-center
-						h2.section-heading Our Amazing Team
-						h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
+						h2.section-heading About Darlene
+						h3.section-subheading.text-muted Master stylist, bourbon enthusiast, & dog lover.
 				div.row
 					div.col-sm-4
-						div.team-member
-							img.img-responsive.img-circle(src='img/team/1.jpg', alt='')
-							h4 Kay Garland
-							p.text-muted Lead Designer
-							ul.list-inline.social-buttons
-								li
-									a(href='#')
-										i.fa.fa-twitter
-								li
-									a(href='#')
-										i.fa.fa-facebook
-								li
-									a(href='#')
-										i.fa.fa-linkedin
 					div.col-sm-4
 						div.team-member
 							img.img-responsive.img-circle(src='img/team/2.jpg', alt='')
-							h4 Larry Parker
-							p.text-muted Lead Marketer
+							h4 Darlene Bryant
+							p.text-muted Owner & Stylist
 							ul.list-inline.social-buttons
 								li
 									a(href='#')
@@ -219,63 +161,24 @@ html(lang='en')
 									a(href='#')
 										i.fa.fa-linkedin
 					div.col-sm-4
-						div.team-member
-							img.img-responsive.img-circle(src='img/team/3.jpg', alt='')
-							h4 Diana Pertersen
-							p.text-muted Lead Developer
-							ul.list-inline.social-buttons
-								li
-									a(href='#')
-										i.fa.fa-twitter
-								li
-									a(href='#')
-										i.fa.fa-facebook
-								li
-									a(href='#')
-										i.fa.fa-linkedin
 				div.row
 					div.col-lg-8.col-lg-offset-2.text-center
 						p.large.text-muted
-							| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.
-		// Clients Aside
-		aside.clients
-			div.container
-				div.row
-					div.col-md-3.col-sm-6
-						a(href='#')
-							img.img-responsive.img-centered(src='img/logos/envato.jpg', alt='')
-					div.col-md-3.col-sm-6
-						a(href='#')
-							img.img-responsive.img-centered(src='img/logos/designmodo.jpg', alt='')
-					div.col-md-3.col-sm-6
-						a(href='#')
-							img.img-responsive.img-centered(src='img/logos/themeforest.jpg', alt='')
-					div.col-md-3.col-sm-6
-						a(href='#')
-							img.img-responsive.img-centered(src='img/logos/creative-market.jpg', alt='')
+							| "I'm going to pump up the fuckin' jams!" - Darlene Bryant
+		
 		
 		footer
 			div.container
 				div.row
 					div.col-md-4
-						span.copyright Copyright © Your Website 2016
+						span.copyright Created by: 
+						strong
+							a(href="https://www.linkedin.com/in/christopher-riewaldt-a21a531b") ChrisR
 					div.col-md-4
-						ul.list-inline.social-buttons
-							li
-								a(href='#')
-									i.fa.fa-twitter
-							li
-								a(href='#')
-									i.fa.fa-facebook
-							li
-								a(href='#')
-									i.fa.fa-linkedin
+						strong.copyright Copyright © ExchangeStreetBarber.com 2017
 					div.col-md-4
-						ul.list-inline.quicklinks
-							li
-								a(href='#') Privacy Policy
-							li
-								a(href='#') Terms of Use
+						span.copyright Font generated by
+							include iconShoutout.html
 		// Portfolio Modals
 		// Use the modals below to showcase details about your portfolio projects!
 		// Portfolio Modal 1
@@ -370,7 +273,8 @@ html(lang='en')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js', integrity='sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb', crossorigin='anonymous')
 		// Theme JavaScript
 		script(src='js/agency.min.js')
-		//Detect Browser
-		script(src="js/detectBrowser.js")
+		
+		
+		
 
 		// end body includes -->
