--- a/views/index.pug
+++ b/views/index.pug
@@ -40,13 +40,13 @@ html(lang='en')
 						li.hidden
 							a(href='#page-top')
 						li
-							a.page-scroll(href='#services') Services
+							a.page-scroll(href='#services') Menu
 						li
-							a.page-scroll(href='#portfolio') Portfolio
+							a.page-scroll(href='#portfolio') Book 24/7
 						li
-							a.page-scroll(href='#about') About
+							a.page-scroll(href='#about') Location
 						li
-							a.page-scroll(href='#team') Team
+							a.page-scroll(href='#team') About
 		
 		// Header
 		header
