--- a/views/index.pug
+++ b/views/index.pug
@@ -115,7 +115,7 @@ html(lang='en')
 				div.row
 					div.col-lg-12.text-center
 						h2.section-heading Book 24/7
-						h3.section-subheading.text-muted Click the button below to book online anytime
+						h3.section-subheading.text-muted Book an appointment online anytime
 				div.row
 					div.col-md-12
 						include vagaro.html
@@ -126,7 +126,7 @@ html(lang='en')
 				div.row
 					div.col-lg-12.text-center
 						h2.section-heading Location
-						h3.section-subheading.text-muted Convienently located in downtown Charleston, steps from available garage and street parking.
+						h3.section-subheading.text-muted Convienently located in downtown Charleston, South Carolina
 						
 					div.col-lg-12.text-center
 						span 10 Exchange Street, Charleston, SC, 29455
@@ -140,13 +140,15 @@ html(lang='en')
 				div.row
 					div.col-lg-12.text-center
 						h2.section-heading About Darlene
-						h3.section-subheading.text-muted Owner | Master Stylist
+						h4.section-subheading.text-muted Owner | Master Stylist
 				div.row
 					div.col-sm-4
 					div.col-sm-4
 						div.team-member
 							img.img-responsive.img-circle(src='img/team/2.jpg', alt='')
-							h4 Darlene Bryant
+							p.large.text-muted
+							| "The dapper gentleman desvers the perfect look to compliment their lifestyle." - Darlene
+							h4 Exchange Street Barber
 							p.text-muted 
 							ul.list-inline.social-buttons
 								li
@@ -156,8 +158,7 @@ html(lang='en')
 					div.col-sm-4
 				div.row
 					div.col-lg-8.col-lg-offset-2.text-center
-						p.large.text-muted
-							| "Some quote" - Darlene Bryant
+						
 		
 		
 		footer
