--- a/views/index.pug
+++ b/views/index.pug
@@ -80,7 +80,7 @@ html(lang='en')
 						h4.service-heading Traditional Straight Razor Shave
 						p.text-muted
 							| The traditional Straight Razor Shave is a calming yet invigorating experience shared by gentlemen for centuries. 
-							| 2x pre-shave oil, hot lather, shave, moisturizing toner, pore-sealing cold towel, aftershave balm.
+							| 2x pre-shave oil, hot lather, shave, moisturizing toner, pore-sealing cold towel, and aftershave balm.
 					div.col-md-4
 						span.fa-stack.fa-4x
 							i.fa.fa-circle.fa-stack-2x.text-primary
@@ -122,14 +122,14 @@ html(lang='en')
 							i.flaticon-short-black-hair-shape.fa-stack-1x
 						h4.service-heading Little Gentleman's Haircut
 						p.text-muted
-							| Even little gentlemen deserve a dapper look to suit their style. 
+							| Even little gentlemen deserve a dapper look. Consult, cut, and style.
 					div.col-md-4
 						span.fa-stack.fa-4x
 							i.fa.fa-circle.fa-stack-2x.text-primary
 							i.fa.fa-graduation-cap.fa-stack-1x
 						h4.service-heading Student's Haircut
 						p.text-muted
-							| A gentleman deserves a dapper beard. Trim and shaping, style, and hot lather neck shave.
+							| Special undergrad student rate. Consult, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
 					div.col-md-2
 		// Portfolio Grid Section
 		section.bg-light-gray(id="portfolio")
