google maps updates

--- a/views/index.pug
+++ b/views/index.pug
@@ -154,7 +154,7 @@ html(lang='en')
 						span 10 Exchange Street, Charleston, SC, 29455
 						br
 						br
-						iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.581046592638!2d-79.92846108481793!3d32.776849480972096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fe7a0ee758693d%3A0x44cf23c2c2e5a1e7!2s10+Exchange+St%2C+Charleston%2C+SC+29401!5e0!3m2!1sen!2sus!4v1491110565202" width="300" height="300" frameborder="0" style="border:0" allowfullscreen)
+						iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.581046592638!2d-79.92846108481793!3d32.776849480972096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fe7a0ee758693d%3A0x44cf23c2c2e5a1e7!2s10+Exchange+St%2C+Charleston%2C+SC+29401!5e0!3m2!1sen!2sus!4v1491110565202" width="50%" height="50%" frameborder="0" style="border:0" allowfullscreen)
 						
 		// Team Section
 		section.bg-light-gray(id="team")
