spl, - test view

--- a/views/index.pug
+++ b/views/index.pug
@@ -169,7 +169,7 @@ html(lang='en')
 						div.team-member
 							img.img-responsive.img-circle(src='img/team/2.jpg', alt='')
 							p.large.text-muted
-							| "The dapper gentleman desvers the perfect look to compliment their lifestyle." - Darlene
+							| "The dapper gentleman deserves the perfect look to compliment their lifestyle." - Darlene
 							h4 Exchange Street Barber
 							p.text-muted 
 							ul.list-inline.social-buttons
