--- a/views/index.pug
+++ b/views/index.pug
@@ -148,7 +148,7 @@ html(lang='en')
 				div.row
 					div.col-lg-12.text-center
 						h2.section-heading Location
-						h3.section-subheading.text-muted Convienently located in downtown Charleston, South Carolina
+						h3.section-subheading.text-muted Conveniently located in downtown Charleston, South Carolina
 						
 					div.col-lg-12.text-center
 						span 10 Exchange Street, Charleston, SC, 29455
