mobile nav-brand font size

--- a/views/index.pug
+++ b/views/index.pug
@@ -70,9 +70,9 @@ html(lang='en')
 						span.fa-stack.fa-4x
 							i.fa.fa-circle.fa-stack-2x.text-primary
 							i.flaticon-scissor-and-comb.fa-stack-1x
-						h4.service-heading Classic Haircut
+						h4.service-heading Gentleman's Haircut
 						p.text-muted A cut & style designed to fit your individual look and preferences. 
-							| Consult, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
+							| Consultation, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
 					div.col-md-4
 						span.fa-stack.fa-4x
 							i.fa.fa-circle.fa-stack-2x.text-primary
@@ -122,14 +122,14 @@ html(lang='en')
 							i.flaticon-short-black-hair-shape.fa-stack-1x
 						h4.service-heading Little Gentleman's Haircut
 						p.text-muted
-							| Even little gentlemen deserve a dapper look. Consult, cut, and style.
+							| Even little gentlemen deserve a dapper look. Consultation, cut, and style.
 					div.col-md-4
 						span.fa-stack.fa-4x
 							i.fa.fa-circle.fa-stack-2x.text-primary
 							i.fa.fa-graduation-cap.fa-stack-1x
 						h4.service-heading Student's Haircut
 						p.text-muted
-							| Special undergrad student rate. Consult, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
+							| Special undergrad student rate. Consultation, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
 					div.col-md-2
 		// Portfolio Grid Section
 		section.bg-light-gray(id="portfolio")
