--- a/views/index.pug
+++ b/views/index.pug
@@ -19,23 +19,26 @@ html(lang='en')
 		link(href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700', rel='stylesheet', type='text/css')
 		link(rel="stylesheet" type="text/css" href="css/flaticon.css")
 		
-		link(rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png")
-		link(rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png")
-		link(rel="apple-touch-icon" sizes="72x72" href="icon/apple-icon-72x72.png")
-		link(rel="apple-touch-icon" sizes="76x76" href="icon/apple-icon-76x76.png")
-		link(rel="apple-touch-icon" sizes="114x114" href="icon/apple-icon-114x114.png")
-		link(rel="apple-touch-icon" sizes="120x120" href="icon/apple-icon-120x120.png")
-		link(rel="apple-touch-icon" sizes="144x144" href="icon/apple-icon-144x144.png")
-		link(rel="apple-touch-icon" sizes="152x152" href="icon/apple-icon-152x152.png")
-		link(rel="apple-touch-icon" sizes="180x180" href="icon/apple-icon-180x180.png")
-		link(rel="icon" type="image/png" sizes="192x192"  href="icon/android-icon-192x192.png")
-		link(rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png")
-		link(rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png")
-		link(rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png")
-		link(rel="manifest" href="icon/manifest.json")
-		meta(name="msapplication-TileColor" content="#ffffff")
-		meta(name="msapplication-TileImage" content="icon/ms-icon-144x144.png")
-		meta(name="theme-color" content="#ffffff")
+		link(rel="apple-touch-icon-precomposed" sizes="57x57" href="icon/apple-touch-icon-57x57.png" )
+		link(rel="apple-touch-icon-precomposed" sizes="114x114" href="icon/apple-touch-icon-114x114.png" )
+		link(rel="apple-touch-icon-precomposed" sizes="72x72" href="icon/apple-touch-icon-72x72.png" )
+		link(rel="apple-touch-icon-precomposed" sizes="144x144" href="icon/apple-touch-icon-144x144.png" )
+		link(rel="apple-touch-icon-precomposed" sizes="60x60" href="icon/apple-touch-icon-60x60.png" )
+		link(rel="apple-touch-icon-precomposed" sizes="120x120" href="icon/apple-touch-icon-120x120.png" )
+		link(rel="apple-touch-icon-precomposed" sizes="76x76" href="icon/apple-touch-icon-76x76.png" )
+		link(rel="apple-touch-icon-precomposed" sizes="152x152" href="icon/apple-touch-icon-152x152.png" )
+		link(rel="icon" type="image/png" href="icon/favicon-196x196.png" sizes="196x196" )
+		link(rel="icon" type="image/png" href="icon/favicon-96x96.png" sizes="96x96" )
+		link(rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32" )
+		link(rel="icon" type="image/png" href="icon/favicon-16x16.png" sizes="16x16" )
+		link(rel="icon" type="image/png" href="icon/favicon-128.png" sizes="128x128" )
+		meta(name="application-name" content="&nbsp;")
+		meta(name="msapplication-TileColor" content="#FFFFFF" )
+		meta(name="msapplication-TileImage" content="icon/mstile-144x144.png" )
+		meta(name="msapplication-square70x70logo" content="icon/mstile-70x70.png" )
+		meta(name="msapplication-square150x150logo" content="icon/mstile-150x150.png" )
+		meta(name="msapplication-wide310x150logo" content="icon/mstile-310x150.png" )
+		meta(name="msapplication-square310x310logo" content="icon/mstile-310x310.png" )
 		
 		// HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
 		// WARNING: Respond.js doesn't work if you view the page via file://
