--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ html(lang='en')
 		meta(charset='utf-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
-		meta(name='description', content='Exchange Street Barber - Charleston, SC. Mens cut, style, shave, scalp massage, and more.')
+		meta(name='description', content='Exchange Street Barber - Charleston, SC. Men's cuts, style, shave, scalp massage, and more.')
 		meta(name='author', content='Chris Riewaldt')
 		title Exchange Street Barber | Charleston SC
 		
@@ -32,7 +32,7 @@ html(lang='en')
 		link(rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32" )
 		link(rel="icon" type="image/png" href="icon/favicon-16x16.png" sizes="16x16" )
 		link(rel="icon" type="image/png" href="icon/favicon-128.png" sizes="128x128" )
-		meta(name="application-name" content="&nbsp;")
+		meta(name="application-name" content="Exchange Street Barber")
 		meta(name="msapplication-TileColor" content="#FFFFFF" )
 		meta(name="msapplication-TileImage" content="icon/mstile-144x144.png" )
 		meta(name="msapplication-square70x70logo" content="icon/mstile-70x70.png" )
