fixed meta errors

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ html(lang='en')
 		meta(charset='utf-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
-		meta(name='description', content='Exchange Street Barber - Charleston, SC. Men's cuts, style, shave, scalp massage, and more.')
+		meta(name='description', content="Exchange Street Barber - Charleston, SC. Mens cuts, style, shave, scalp massage, and more.")
 		meta(name='author', content='Chris Riewaldt')
 		title Exchange Street Barber | Charleston SC
 		
@@ -15,23 +15,24 @@ html(lang='en')
 		link(href='vendor/font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
 		link(href='https://fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
 		link(href='https://fonts.googleapis.com/css?family=Kaushan+Script', rel='stylesheet', type='text/css')
+		
 		link(href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic', rel='stylesheet', type='text/css')
 		link(href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700', rel='stylesheet', type='text/css')
 		link(rel="stylesheet" type="text/css" href="css/flaticon.css")
 		
-		link(rel="apple-touch-icon-precomposed" sizes="57x57" href="icon/apple-touch-icon-57x57.png" )
-		link(rel="apple-touch-icon-precomposed" sizes="114x114" href="icon/apple-touch-icon-114x114.png" )
-		link(rel="apple-touch-icon-precomposed" sizes="72x72" href="icon/apple-touch-icon-72x72.png" )
-		link(rel="apple-touch-icon-precomposed" sizes="144x144" href="icon/apple-touch-icon-144x144.png" )
-		link(rel="apple-touch-icon-precomposed" sizes="60x60" href="icon/apple-touch-icon-60x60.png" )
-		link(rel="apple-touch-icon-precomposed" sizes="120x120" href="icon/apple-touch-icon-120x120.png" )
-		link(rel="apple-touch-icon-precomposed" sizes="76x76" href="icon/apple-touch-icon-76x76.png" )
-		link(rel="apple-touch-icon-precomposed" sizes="152x152" href="icon/apple-touch-icon-152x152.png" )
-		link(rel="icon" type="image/png" href="icon/favicon-196x196.png" sizes="196x196" )
-		link(rel="icon" type="image/png" href="icon/favicon-96x96.png" sizes="96x96" )
-		link(rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32" )
-		link(rel="icon" type="image/png" href="icon/favicon-16x16.png" sizes="16x16" )
-		link(rel="icon" type="image/png" href="icon/favicon-128.png" sizes="128x128" )
+		link(rel="apple-touch-icon-precomposed" sizes="57x57" href="icon/apple-touch-icon-57x57.png")
+		link(rel="apple-touch-icon-precomposed" sizes="114x114" href="icon/apple-touch-icon-114x114.png")
+		link(rel="apple-touch-icon-precomposed" sizes="72x72" href="icon/apple-touch-icon-72x72.png")
+		link(rel="apple-touch-icon-precomposed" sizes="144x144" href="icon/apple-touch-icon-144x144.png")
+		link(rel="apple-touch-icon-precomposed" sizes="60x60" href="icon/apple-touch-icon-60x60.png")
+		link(rel="apple-touch-icon-precomposed" sizes="120x120" href="icon/apple-touch-icon-120x120.png")
+		link(rel="apple-touch-icon-precomposed" sizes="76x76" href="icon/apple-touch-icon-76x76.png")
+		link(rel="apple-touch-icon-precomposed" sizes="152x152" href="icon/apple-touch-icon-152x152.png")
+		link(rel="icon" type="image/png" href="icon/favicon-196x196.png" sizes="196x196")
+		link(rel="icon" type="image/png" href="icon/favicon-96x96.png" sizes="96x96")
+		link(rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32")
+		link(rel="icon" type="image/png" href="icon/favicon-16x16.png" sizes="16x16")
+		link(rel="icon" type="image/png" href="icon/favicon-128.png" sizes="128x128")
 		meta(name="application-name" content="Exchange Street Barber")
 		meta(name="msapplication-TileColor" content="#FFFFFF" )
 		meta(name="msapplication-TileImage" content="icon/mstile-144x144.png" )
