--- a/views/index.pug
+++ b/views/index.pug
@@ -49,173 +49,191 @@ html(lang='en')
 		// Theme CSS
 		link(href='css/agency.css', rel='stylesheet')
 	body.index(id="page-top")
-		nav.navbar.navbar-default.navbar-custom.navbar-fixed-top#mainNav
-			div.container
-				div.navbar-header.page-scroll
-					button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
-						span.sr-only Toggle navigation
-						|  Menu 
-						i.fa.fa-bars
-					a.navbar-brand.page-scroll(href='#page-top', style='font-family: script1;') Exchange Street Barber
-				div.collapse.navbar-collapse#bs-example-navbar-collapse-1
-					ul.nav.navbar-nav.navbar-right
-						li.hidden
-							a(href='#page-top')
-						li
-							a.page-scroll(href='#services') Menu
-						li
-							a.page-scroll(href='#portfolio') Book 24/7
-						li
-							a.page-scroll(href='#about') Location
-						li
-							a.page-scroll(href='#team') About
-		
-		// Header
-		header
-			div.container
-				div.intro-text
-					div.intro-lead-in Exchange Street Barber
-					h4 10 Exchange St, Charleston, SC
-					//p 10 Exchange St. Charleston, SC
-					//div.intro-heading Exchange Street Barber
-					//a.page-scroll.btn.btn-xl(href='#services') Tell Me More
+		div#bodyWrap
+			nav.navbar.navbar-default.navbar-custom.navbar-fixed-top#mainNav
+				div.container
+					div.navbar-header.page-scroll
+						button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+							span.sr-only Toggle navigation
+							|  Menu 
+							i.fa.fa-bars
+						a.navbar-brand.page-scroll(href='#page-top', style='font-family: script1;') Exchange Street Barber
+					div.collapse.navbar-collapse#bs-example-navbar-collapse-1
+						ul.nav.navbar-nav.navbar-right
+							li.hidden
+								a(href='#page-top')
+							li
+								a.page-scroll(href='#services') Menu
+							li
+								a.page-scroll(href='#portfolio') Book 24/7
+							li
+								a.page-scroll(href='#about') Location & Contact
+							li
+								a.page-scroll(href='#team') About
+			
+			// Header
+			header
+				div.container
+					div.intro-text
+						div.intro-lead-in Exchange Street Barber
+						h4 10 Exchange St, Charleston, SC
+						//p 10 Exchange St. Charleston, SC
+						//div.intro-heading Exchange Street Barber
+						//a.page-scroll.btn.btn-xl(href='#services') Tell Me More
+							
+			// Quote Section
+			section(id="quote")
+				div.container
+					div.row
+						div.col-lg-12.text-center
+							h3.section-subheading.text-muted "Looking good leads to feeling good, and feeling good leads to empowerment." - Scott Barnes
+			// Services Section
+			section(id="services")
+				div.container
+					div.row
+						div.col-lg-12.text-center
+							h2.section-heading Menu 
+					div.row.text-center
+						div.col-md-4
+							span.fa-stack.fa-4x
+								i.fa.fa-circle.fa-stack-2x.text-primary
+								i.flaticon-scissor-and-comb.fa-stack-1x
+							h4.service-heading Gentleman's Haircut
+							p.text-muted A cut & style designed to fit your individual look and preferences. 
+								| Consultation, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
+						div.col-md-4
+							span.fa-stack.fa-4x
+								i.fa.fa-circle.fa-stack-2x.text-primary
+								i.flaticon-razor-hair-salon-tool.fa-stack-1x
+							h4.service-heading Traditional Straight Razor Shave
+							p.text-muted
+								| A calming yet invigorating experience enjoyed by gentlemen for centuries. 
+								| 2x pre-shave oil, hot lather, shave, moisturizing toner, pore-sealing cold towel, and aftershave balm.
+						div.col-md-4
+							span.fa-stack.fa-4x
+								i.fa.fa-circle.fa-stack-2x.text-primary
+								i.flaticon-bald-man-head.fa-stack-1x
+							h4.service-heading Scalp Massage
+							p.text-muted
+								| Stimulate your nerves and blood vessels while calming muscle tension in your upper back, neck and scalp.
+								| Calming oil blend, conditioning scalp treatment, scalp, neck, and shoulder massage.
+					div.row.text-center
+						div.col-md-4
+							span.fa-stack.fa-4x
+								i.fa.fa-circle.fa-stack-2x.text-primary
+								//i.fa.fa-shopping-cart.fa-stack-1x.fa-inverse
+								i.flaticon-three-bottles-of-hair-salon.fa-stack-1x
+							h4.service-heading Permanent & Demi-Permanent Color 
+							p.text-muted
+								| Demi-Permanent deposits color pigment onto the hair cuticle without penetrating it, lasting up to 24 washes.
+								| Permanent changes the pigment of your hair.
+						div.col-md-4
+							span.fa-stack.fa-4x
+								i.fa.fa-circle.fa-stack-2x.text-primary
+								i.flaticon-male-head-hair-and-beard.fa-stack-1x
+							h4.service-heading Beard Trim
+							p.text-muted
+								| A gentleman deserves a dapper beard. Trim and shaping, style, and hot lather neck shave.
+						.col-md-4
+							span.fa-stack.fa-4x
+								i.fa.fa-circle.fa-stack-2x.text-primary
+								i.flaticon-shaver.fa-stack-1x
+							h4.service-heading Nose, Ears, & Eyebrows
+							p.text-muted
+								| Clipper and/or wax removal of unwanted nose, ear, and eyebrow hair.
+					div.row.text-center
+						div.col-md-2
+						div.col-md-4
+							span.fa-stack.fa-4x
+								i.fa.fa-circle.fa-stack-2x.text-primary
+								//i.fa.fa-shopping-cart.fa-stack-1x.fa-inverse
+								i.flaticon-short-black-hair-shape.fa-stack-1x
+							h4.service-heading Little Gentleman's Haircut
+							p.text-muted
+								| Even little gentlemen deserve a dapper look. Consultation, cut, and style.
+						div.col-md-4
+							span.fa-stack.fa-4x
+								i.fa.fa-circle.fa-stack-2x.text-primary
+								i.fa.fa-graduation-cap.fa-stack-1x
+							h4.service-heading Student's Haircut
+							p.text-muted
+								| Special undergrad student rate. Consultation, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
+						div.col-md-2
+			// Portfolio Grid Section
+			section.bg-light-gray(id="portfolio")
+				div.container
+					div.row
+						div.col-lg-12.text-center
+							h2.section-heading Book 24/7
+							h3.section-subheading.text-muted Book an appointment online anytime
+					div.row
+						div.col-md-12
+							include vagaro.html
 						
-		// Services Section
-		section(id="services")
-			div.container
-				div.row
-					div.col-lg-12.text-center
-						h2.section-heading Menu
-						h3.section-subheading.text-muted "Looking good leads to feeling good, and feeling good leads to empowerment." - Scott Barnes
-				div.row.text-center
-					div.col-md-4
-						span.fa-stack.fa-4x
-							i.fa.fa-circle.fa-stack-2x.text-primary
-							i.flaticon-scissor-and-comb.fa-stack-1x
-						h4.service-heading Gentleman's Haircut
-						p.text-muted A cut & style designed to fit your individual look and preferences. 
-							| Consultation, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
-					div.col-md-4
-						span.fa-stack.fa-4x
-							i.fa.fa-circle.fa-stack-2x.text-primary
-							i.flaticon-razor-hair-salon-tool.fa-stack-1x
-						h4.service-heading Traditional Straight Razor Shave
-						p.text-muted
-							| The traditional Straight Razor Shave is a calming yet invigorating experience shared by gentlemen for centuries. 
-							| 2x pre-shave oil, hot lather, shave, moisturizing toner, pore-sealing cold towel, and aftershave balm.
-					div.col-md-4
-						span.fa-stack.fa-4x
-							i.fa.fa-circle.fa-stack-2x.text-primary
-							i.flaticon-bald-man-head.fa-stack-1x
-						h4.service-heading Scalp Massage
-						p.text-muted
-							| Stimulate your nerves and blood vessels while calming muscle tension in your upper back, neck and scalp.
-							| Calming oil blend, conditioning scalp treatment, scalp, neck, and shoulder massage.
-				div.row.text-center
-					div.col-md-4
-						span.fa-stack.fa-4x
-							i.fa.fa-circle.fa-stack-2x.text-primary
-							//i.fa.fa-shopping-cart.fa-stack-1x.fa-inverse
-							i.flaticon-three-bottles-of-hair-salon.fa-stack-1x
-						h4.service-heading Permanent & Demi-Permanent Color 
-						p.text-muted
-							| Demi-Permanent deposits color pigment onto the hair cuticle without penetrating it, lasting up to 24 washes.
-							| Permanent changes the pigment of your hair.
-					div.col-md-4
-						span.fa-stack.fa-4x
-							i.fa.fa-circle.fa-stack-2x.text-primary
-							i.flaticon-male-head-hair-and-beard.fa-stack-1x
-						h4.service-heading Beard Trim
-						p.text-muted
-							| A gentleman deserves a dapper beard. Trim and shaping, style, and hot lather neck shave.
-					.col-md-4
-						span.fa-stack.fa-4x
-							i.fa.fa-circle.fa-stack-2x.text-primary
-							i.flaticon-shaver.fa-stack-1x
-						h4.service-heading Nose, Ears, & Eyebrows
-						p.text-muted
-							| Clipper and/or wax removal of unwanted nose, ear, and eyebrow hair.
-				div.row.text-center
-					div.col-md-2
-					div.col-md-4
-						span.fa-stack.fa-4x
-							i.fa.fa-circle.fa-stack-2x.text-primary
-							//i.fa.fa-shopping-cart.fa-stack-1x.fa-inverse
-							i.flaticon-short-black-hair-shape.fa-stack-1x
-						h4.service-heading Little Gentleman's Haircut
-						p.text-muted
-							| Even little gentlemen deserve a dapper look. Consultation, cut, and style.
-					div.col-md-4
-						span.fa-stack.fa-4x
-							i.fa.fa-circle.fa-stack-2x.text-primary
-							i.fa.fa-graduation-cap.fa-stack-1x
-						h4.service-heading Student's Haircut
-						p.text-muted
-							| Special undergrad student rate. Consultation, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
-					div.col-md-2
-		// Portfolio Grid Section
-		section.bg-light-gray(id="portfolio")
-			div.container
-				div.row
-					div.col-lg-12.text-center
-						h2.section-heading Book 24/7
-						h3.section-subheading.text-muted Book an appointment online anytime
-				div.row
-					div.col-md-12
-						include vagaro.html
-					
-		// About Section
-		section(id="about")
-			div.container
-				div.row
-					div.col-lg-12.text-center
-						h2.section-heading Location
-						h3.section-subheading.text-muted Conveniently located in downtown Charleston, South Carolina
-						
-					div.col-lg-12.text-center
-						span 10 Exchange Street, Charleston, SC, 29455
-						br
-						br
-						iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.581046592638!2d-79.92846108481793!3d32.776849480972096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fe7a0ee758693d%3A0x44cf23c2c2e5a1e7!2s10+Exchange+St%2C+Charleston%2C+SC+29401!5e0!3m2!1sen!2sus!4v1491110565202" width="50%" height="50%" frameborder="0" style="border:0" allowfullscreen)
-						
-		// Team Section
-		section.bg-light-gray(id="team")
-			div.container
-				div.row
-					div.col-lg-12.text-center
-						h2.section-heading About Darlene
-						h4.section-subheading.text-muted Owner | Master Stylist
-				div.row
-					div.col-sm-4
-					div.col-sm-4
-						div.team-member
-							img.img-responsive.img-circle(src='img/team/2.jpg', alt='')
-							p.large.text-muted
-							| "The dapper gentleman deserves the perfect look to compliment their lifestyle." - Darlene
-							h4 Exchange Street Barber
-							p.text-muted 
-							ul.list-inline.social-buttons
-								li
-									a(href="https://www.instagram.com/exchangestreetbarber" target="_blank")
-										i.fa.fa-instagram
-
-					div.col-sm-4
-				div.row
-					div.col-lg-8.col-lg-offset-2.text-center
-						
-		
-		
-		footer
-			div.container
-				div.row
-					div.col-md-4
-						span.copyright Created by: 
-						strong
-							a(href="https://www.linkedin.com/in/christopher-riewaldt-a21a531b") ChrisR
-					div.col-md-4
-						strong.copyright Copyright © ExchangeStreetBarber.com 2017
-					div.col-md-4
-						include iconShoutout.html
+			// About Section
+			section(id="about")
+				div.container
+					div.row
+						div.col-lg-12.text-center
+							h2.section-heading Location
+							h3.section-subheading.text-muted Conveniently located in downtown Charleston, South Carolina
+							a.btn.btn-xl(href="https://goo.gl/maps/t23546Yc5xt" target="_blank") Get Directions 
+							br
+							br
+						div.col-lg-12.text-center
+							span 10 Exchange Street, Charleston, SC, 29455
+							br
+							br
+							iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.581046592638!2d-79.92846108481793!3d32.776849480972096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fe7a0ee758693d%3A0x44cf23c2c2e5a1e7!2s10+Exchange+St%2C+Charleston%2C+SC+29401!5e0!3m2!1sen!2sus!4v1491110565202" width="50%" height="50%" frameborder="0" style="border:0" allowfullscreen)
+							
+			
+			section.bg-light-gray(id="contactus")
+				div.container
+					div.row
+						div.col-lg-12.text-center
+							h2.section-heading Contact Us
+							h4.section-subheading.text-muted Have a question?
+							br
+							h4.section-subheading (843) 406-5122
+			// Team Section
+			section(id="team")
+				div.container
+					div.row
+						div.col-lg-12.text-center
+							h2.section-heading About Darlene
+							h4.section-subheading.text-muted Owner | Master Stylist
+					div.row
+						div.col-sm-4
+						div.col-sm-4
+							div.team-member
+								img.img-responsive.img-circle(src='img/team/2.jpg', alt='')
+								p.large.text-muted
+								| "The dapper gentleman deserves the perfect look to compliment his lifestyle." - Darlene
+								h4 Exchange Street Barber
+								p.text-muted 
+								ul.list-inline.social-buttons
+									li
+										a(href="https://www.instagram.com/exchangestreetbarber" target="_blank")
+											i.fa.fa-instagram
+	
+						div.col-sm-4
+					div.row
+						div.col-lg-8.col-lg-offset-2.text-center
+							
+			
+			
+			footer.bg-light-gray
+				div.container
+					div.row
+						div.col-md-4
+							span.copyright Created by: 
+							strong
+								a(href="https://www.linkedin.com/in/christopher-riewaldt-a21a531b") ChrisR
+						div.col-md-4
+							strong.copyright Copyright © ExchangeStreetBarber.com 2017
+						div.col-md-4
+							include iconShoutout.html
+			//end of bodyWrap
 		
 		// body includes
 		
@@ -230,4 +248,3 @@ html(lang='en')
 		
 		// Custom JavaScript
 		script(src='js/esb.js')
-		//test
