get directions link

--- a/views/index.pug
+++ b/views/index.pug
@@ -177,7 +177,7 @@ html(lang='en')
 						div.col-lg-12.text-center
 							h2.section-heading Location
 							h3.section-subheading.text-muted Conveniently located in downtown Charleston, South Carolina
-							a.btn.btn-xl(href="https://goo.gl/maps/t23546Yc5xt" target="_blank") Get Directions 
+							a.btn.btn-xl(href="https://www.google.com/maps/dir//10+Exchange+St,+Charleston,+SC+29401/@32.7768495,-79.9284611,17z/data=!4m16!1m7!3m6!1s0x88fe7a0ee758693d:0x44cf23c2c2e5a1e7!2s10+Exchange+St,+Charleston,+SC+29401!3b1!8m2!3d32.7768495!4d-79.9262724!4m7!1m0!1m5!1m1!1s0x88fe7a0ee758693d:0x44cf23c2c2e5a1e7!2m2!1d-79.9262724!2d32.7768495" target="_blank") Get Directions 
 							br
 							br
 						div.col-lg-12.text-center
