--- a/views/index.pug
+++ b/views/index.pug
@@ -177,14 +177,14 @@ html(lang='en')
 						div.col-lg-12.text-center
 							h2.section-heading Location
 							h3.section-subheading.text-muted Conveniently located in downtown Charleston, South Carolina
-							a.btn.btn-xl(href="https://www.google.com/maps/dir//10+Exchange+St,+Charleston,+SC+29401/@32.7768495,-79.9284611,17z/data=!4m16!1m7!3m6!1s0x88fe7a0ee758693d:0x44cf23c2c2e5a1e7!2s10+Exchange+St,+Charleston,+SC+29401!3b1!8m2!3d32.7768495!4d-79.9262724!4m7!1m0!1m5!1m1!1s0x88fe7a0ee758693d:0x44cf23c2c2e5a1e7!2m2!1d-79.9262724!2d32.7768495" target="_blank") Get Directions 
+							a.btn.btn-xl(href="https://maps.google.com/maps/dir//10+Exchange+St,+Charleston,+SC+29401/@32.7768495,-79.9284611,17z/data=!4m16!1m7!3m6!1s0x88fe7a0ee758693d:0x44cf23c2c2e5a1e7!2s10+Exchange+St,+Charleston,+SC+29401!3b1!8m2!3d32.7768495!4d-79.9262724!4m7!1m0!1m5!1m1!1s0x88fe7a0ee758693d:0x44cf23c2c2e5a1e7!2m2!1d-79.9262724!2d32.7768495" target="_blank") Get Directions 
 							br
 							br
 						div.col-lg-12.text-center
 							span 10 Exchange Street, Charleston, SC, 29455
 							br
 							br
-							iframe(src="https://maps.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.581046592638!2d-79.92846108481793!3d32.776849480972096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fe7a0ee758693d%3A0x44cf23c2c2e5a1e7!2s10+Exchange+St%2C+Charleston%2C+SC+29401!5e0!3m2!1sen!2sus!4v1491110565202" width="50%" height="50%" frameborder="0" style="border:0" allowfullscreen)
+							iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.581046592638!2d-79.92846108481793!3d32.776849480972096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fe7a0ee758693d%3A0x44cf23c2c2e5a1e7!2s10+Exchange+St%2C+Charleston%2C+SC+29401!5e0!3m2!1sen!2sus!4v1491110565202" width="50%" height="50%" frameborder="0" style="border:0" allowfullscreen)
 							
 			
 			section.bg-light-gray(id="contactus")
