get directions link

--- a/views/index.pug
+++ b/views/index.pug
@@ -177,7 +177,7 @@ html(lang='en')
 						div.col-lg-12.text-center
 							h2.section-heading Location
 							h3.section-subheading.text-muted Conveniently located in downtown Charleston, South Carolina
-							a.btn.btn-xl(href="https://goo.gl/maps/J4o2PyERFwR2" target="_blank") Get Directions 
+							a.btn.btn-xl(href="https://goo.gl/maps/jx68KDFNbX42" target="_blank") Get Directions 
 							br
 							br
 						div.col-lg-12.text-center
