--- a/views/index.pug
+++ b/views/index.pug
@@ -99,7 +99,7 @@ html(lang='en')
 								i.fa.fa-circle.fa-stack-2x.text-primary
 								i.flaticon-scissor-and-comb.fa-stack-1x
 							h4.service-heading Gentleman's Haircut
-							p.text-muted A cut & style designed to fit your individual look and preferences. 
+							p.text-muted A cut and style designed to fit your individual look and preferences. 
 								| Consultation, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
 						div.col-md-4
 							span.fa-stack.fa-4x
