by appointment only

--- a/views/index.pug
+++ b/views/index.pug
@@ -165,8 +165,8 @@ html(lang='en')
 				div.container
 					div.row
 						div.col-lg-12.text-center
-							h2.section-heading Book 24/7
-							h3.section-subheading.text-muted Book an appointment online anytime
+							h2.section-heading Book An Appointment Online
+							h3.section-subheading.text-muted By appointment only
 					div.row
 						div.col-md-12
 							include vagaro.html
