--- a/views/index.pug
+++ b/views/index.pug
@@ -165,8 +165,8 @@ html(lang='en')
 				div.container
 					div.row
 						div.col-lg-12.text-center
-							h2.section-heading By Appointment Only
-							h3.section-subheading.text-muted Book 24/7
+							h3.section-heading By Appointment Only
+							h3.section-subheading.text-muted Book Online 24/7
 					div.row
 						div.col-md-12
 							include vagaro.html
