--- a/views/index.pug
+++ b/views/index.pug
@@ -142,6 +142,7 @@ html(lang='en')
 							h4.service-heading Nose, Ears, & Eyebrows
 							p.text-muted
 								| Clipper and/or wax removal of unwanted nose, ear, and eyebrow hair.
+					<!–– REMOVING BOTTOM ROW
 					div.row.text-center
 						div.col-md-2
 						div.col-md-4
@@ -160,6 +161,7 @@ html(lang='en')
 							p.text-muted
 								| Special undergrad student rate. Consultation, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
 						div.col-md-2
+					-->
 			// Portfolio Grid Section
 			section.bg-light-gray(id="portfolio")
 				div.container
