--- a/views/index.pug
+++ b/views/index.pug
@@ -142,26 +142,26 @@ html(lang='en')
 							h4.service-heading Nose, Ears, & Eyebrows
 							p.text-muted
 								| Clipper and/or wax removal of unwanted nose, ear, and eyebrow hair.
-					<!–– REMOVING BOTTOM ROW
-					div.row.text-center
-						div.col-md-2
-						div.col-md-4
-							span.fa-stack.fa-4x
-								i.fa.fa-circle.fa-stack-2x.text-primary
-								//i.fa.fa-shopping-cart.fa-stack-1x.fa-inverse
-								i.flaticon-short-black-hair-shape.fa-stack-1x
-							h4.service-heading Little Gentleman's Haircut
-							p.text-muted
-								| Even little gentlemen deserve a dapper look. Consultation, cut, and style.
-						div.col-md-4
-							span.fa-stack.fa-4x
-								i.fa.fa-circle.fa-stack-2x.text-primary
-								i.fa.fa-graduation-cap.fa-stack-1x
-							h4.service-heading Student's Haircut
-							p.text-muted
-								| Special undergrad student rate. Consultation, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
-						div.col-md-2
-					-->
+					// <!–– REMOVING BOTTOM ROW
+					//div.row.text-center
+					//	div.col-md-2
+					//	div.col-md-4
+					//		span.fa-stack.fa-4x
+					//			i.fa.fa-circle.fa-stack-2x.text-primary
+					//			//i.fa.fa-shopping-cart.fa-stack-1x.fa-inverse
+					//			i.flaticon-short-black-hair-shape.fa-stack-1x
+					//		h4.service-heading Little Gentleman's Haircut
+					//		p.text-muted
+					//			| Even little gentlemen deserve a dapper look. Consultation, cut, and style.
+					//	div.col-md-4
+					//		span.fa-stack.fa-4x
+					//			i.fa.fa-circle.fa-stack-2x.text-primary
+					//			i.fa.fa-graduation-cap.fa-stack-1x
+					//		h4.service-heading Student's Haircut
+					//		p.text-muted
+					//			| Special undergrad student rate. Consultation, shampoo, conditioning scalp treatment, cut, style, and hot lather neck shave.
+					//	div.col-md-2
+					//-->
 			// Portfolio Grid Section
 			section.bg-light-gray(id="portfolio")
 				div.container
