--- a/views/index.pug
+++ b/views/index.pug
@@ -89,7 +89,7 @@ html(lang='en')
 							h3.section-subheading.text-muted "Looking good leads to feeling good, and feeling good leads to empowerment." - Scott Barnes
 			// Services Section
 			section(id="services")
-				div.container
+				//div.container
 					div.row
 						div.col-lg-12.text-center
 							h2.section-heading Menu
